fix: convert API to POST with json payload
